--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     testRuntime "org.objenesis:objenesis:2.6"
     compileOnly "org.codehaus.groovy:groovy-all:2.4.1"
     testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
+    testCompile 'com.codeborne:selenide:5.10.0'
 }
 
 test {
